[gd_scene load_steps=3 format=3 uid="uid://lllawf0bm27e"]

[ext_resource type="Script" path="res://addons/lisper-debugger/lisper_debugger.gd" id="1_1tyq7"]
[ext_resource type="Theme" uid="uid://dnagam46837no" path="res://addons/lisper-debugger/debugger.theme" id="1_erdyy"]

[node name="Debugger" type="Node"]
script = ExtResource("1_1tyq7")

[node name="Window" type="Window" parent="."]
title = "Lisper Debugger"
position = Vector2i(0, 36)
size = Vector2i(1366, 421)
wrap_controls = true
theme = ExtResource("1_erdyy")

[node name="PanelContainer" type="PanelContainer" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Window/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TabContainer" type="TabContainer" parent="Window/PanelContainer/MarginContainer"]
layout_mode = 2
tab_alignment = 1

[node name="Console" type="MarginContainer" parent="Window/PanelContainer/MarginContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HSplitContainer" type="HSplitContainer" parent="Window/PanelContainer/MarginContainer/TabContainer/Console"]
layout_mode = 2
split_offset = -80

[node name="HBoxContainer" type="HBoxContainer" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Contexts"

[node name="ContextList" type="ItemList" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "REPL"

[node name="REPLOutput" type="TextEdit" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_vertical = 3
editable = false
drag_and_drop_selection_enabled = false
middle_mouse_paste_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="REPLInput" type="CodeEdit" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
editable = false
scroll_fit_content_height = true
draw_control_chars = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="TToggle" type="Button" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Toggle Tokenize Result"
toggle_mode = true
text = "Ｔ"

[node name="CToggle" type="Button" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Toggle Compile Result"
toggle_mode = true
text = "Ｃ"

[node name="PrevBtn" type="Button" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Previous History (Ctrl + Up)"
toggle_mode = true
text = " ▲ "

[node name="NextBtn" type="Button" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Next History (Ctrl + Down)"
toggle_mode = true
text = " ▼ "

[node name="ExecBtn" type="Button" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Execute (Ctrl + Enter)"
disabled = true
text = " ‣ "

[node name="HSplitContainer" type="HSplitContainer" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSplitContainer" type="VSplitContainer" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/VSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Jumps"

[node name="JumpList" type="ItemList" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/VSplitContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true
text_overrun_behavior = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/VSplitContainer/VBoxContainer2"]
layout_mode = 2
text = "Stacks"

[node name="StackList" type="ItemList" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/VSplitContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true
text_overrun_behavior = 1

[node name="HSplitContainer" type="HSplitContainer" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer"]
layout_mode = 2
split_offset = -320

[node name="VBoxContainer" type="VBoxContainer" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Decompile"

[node name="DecompView" type="TextEdit" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 200)
layout_mode = 2
size_flags_vertical = 3
editable = false
middle_mouse_paste_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="RefreshBtn" type="Button" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Refresh Context Info"
text = " ↻ "

[node name="PassBtn" type="Button" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Pass Break"
disabled = true
text = " ⧐ "

[node name="VBoxContainer2" type="VBoxContainer" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/HSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/HSplitContainer/VBoxContainer2"]
layout_mode = 2
text = "Variables"

[node name="VarTree" type="Tree" parent="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/HSplitContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
select_mode = 1
scroll_horizontal_enabled = false

[connection signal="item_selected" from="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer/ContextList" to="." method="_on_context_list_item_selected"]
[connection signal="gui_input" from="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer2/HBoxContainer/REPLInput" to="." method="_on_repl_input_gui_input"]
[connection signal="pressed" from="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer2/HBoxContainer/PrevBtn" to="." method="_on_prev_btn_pressed"]
[connection signal="pressed" from="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer2/HBoxContainer/NextBtn" to="." method="_on_next_btn_pressed"]
[connection signal="pressed" from="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HBoxContainer/VBoxContainer2/HBoxContainer/ExecBtn" to="." method="_on_exec_btn_pressed"]
[connection signal="item_selected" from="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/VSplitContainer/VBoxContainer/JumpList" to="." method="_on_jump_list_item_selected"]
[connection signal="item_selected" from="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/VSplitContainer/VBoxContainer2/StackList" to="." method="_on_stack_list_item_selected"]
[connection signal="pressed" from="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/HSplitContainer/VBoxContainer/HBoxContainer/RefreshBtn" to="." method="_on_refresh_btn_pressed"]
[connection signal="pressed" from="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/HSplitContainer/VBoxContainer/HBoxContainer/PassBtn" to="." method="_on_pass_btn_pressed"]
[connection signal="item_activated" from="Window/PanelContainer/MarginContainer/TabContainer/Console/HSplitContainer/HSplitContainer/HSplitContainer/VBoxContainer2/VarTree" to="." method="_on_var_tree_item_activated"]
